scripts/k8s/go-app-service.yaml
# Service per l'app Go
apiVersion: v1
kind: Service
metadata:
  name: go-app-service
spec:
  selector:
    app: go-app
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    nodePort: 30000 
  type: NodePort
