scripts/k8s/postgres-service.yaml
# Service per PostgreSQL
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  selector:
    app: postgres
  ports:
  - protocol: TCP
    port: 1234
    targetPort: 5432 
  type: ClusterIP
